--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -1,11 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
-/*!
- * Bootstrap v4.5.3 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
 
 :root {
   --blue: #3490dc;
@@ -51,6 +45,25 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+h1{
+    text-align: center;
+}
+
+p{
+    font-size: large;
+    text-align: center;
+}
+
+ul p{
+    text-align: left;
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 article,
 aside,
 figcaption,
@@ -63,6 +76,12 @@ nav,
 section {
   display: block;
 }
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
 
 body {
   margin: 0;
@@ -72,7 +91,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: rgb(151, 225, 255);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -4832,7 +4851,7 @@ input[type=button].btn-block {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(0, 109, 172);
 }
 
 .navbar-light .navbar-brand:hover,
@@ -4841,7 +4860,7 @@ input[type=button].btn-block {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgb(0, 109, 172);
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
@@ -7043,7 +7062,7 @@ button.bg-dark:focus {
 }
 
 .bg-white {
-  background-color: #fff !important;
+  background-color: #FDCC00 !important;
 }
 
 .bg-transparent {
